<resources>
    <string name="app_name">CafetinesUES</string>

    <!-- Botones genericos -->
    <string name="insertar">Insertar en Local</string>
    <string name="insertarServicio">Insertar en Servicio Web</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="consultarServidor">Consultar en Servidor</string>
    <string name="eliminar">Eliminar</string>
    <string name="limpiar">Limpiar</string>
    <string name="resultado">Resultado</string>

    <!-- Tabla Combo -->
    <string name="texto_combo">COMBO</string>
    <string name="id_combo">ID del Combo</string>
    <string name="precio_combo">Precio del Combo</string>

    <!-- Tabla ComboProducto -->
    <string name="texto_combo_producto">COMBO-PRODUCTO</string>
    <string name="id_combo_producto">ID del ComboProducto</string>

    <!-- Tabla DetallePedido -->
    <string name="texto_detalle_pedido">DETALLE-PEDIDO</string>
    <string name="id_detalle_pedido">ID del DetallePedido</string>
    <string name="cantidad_detalle_pedido">Cantidad del Producto/Combo elegido</string>
    <string name="subtotal_detalle_pedido">Subtotal</string>
    <string name="id_ProductoOrCombo">ID del Producto o Combo</string>

    <!-- Tabla Pedido -->
    <string name="texto_pedido">PEDIDO</string>
    <string name="id_pedido">ID del Pedido</string>

    <!-- Tabla Producto -->
    <string name="texto_Producto">PRODUCTO</string>
    <string name="id_Producto">ID del Producto</string>
    <!--<string name="id_TipoProducto"></string>-->
    <string name="nombre_Producto">Nombre del Producto</string>
    <string name="estado_Producto">Estado del Producto</string>
    <string name="precioactual_Producto">Precio actual</string>

    <!-- Tabla Empleado -->
    <string name="texto_Empleado">EMPLEADO</string>
    <string name="id_Empleado">ID del empleado</string>
    <string name="nombre_Empleado">Nombre del empleado</string>
    <string name="tipo_Empleado">Tipo del empleado</string>
    <string name="id_Local">ID del local</string>

    <!-- Tabla TipoProducto -->
    <string name="texto_TipoProducto">TIPO PRODUCTO</string>
    <string name="id_TipoProducto">ID del Tipo Producto</string>
    <string name="nombre_TipoProducto">Nombre del Tipo Producto</string>

    <!-- Tabla PrecioProducto -->
    <string name="texto_PrecioProducto">PRECIO PRODUCTO</string>
    <string name="id_PrecioProducto">ID de Precio Producto</string>
    <string name="id_ListaPrecio">ID de Lista Precio</string>
    <!--<string name="id_Producto">ID del Producto</string>-->
    <string name="precio">Precio</string>

    <!-- Tabla Cliente -->
    <string name="texto_cliente">CLIENTE</string>
    <string name="texto_id_cliente">Id Cliente</string>
    <string name="texto_nombre">Nombres</string>
    <string name="texto_apellido">Apellidos</string>
    <string name="texto_fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="texto_ubicacion">ID Ubicacion</string>

    <!-- Tabla TipoPago -->
    <string name="texto_TipoPago">Tipo Pago</string>
    <string name="texto_id_tipoPago">Id TipoPago</string>
    <string name="texto_nombreTipoPago">Nombre Pago</string>

    <!-- Tabla Facultad -->
    <string name="texto_Facultad">FACULTAD</string>
    <string name="id_Facultad">ID de la Facultad</string>
    <string name="nombre_Facultad">Nombre de la Facultad</string>

    <!-- Tabla Encargado Local -->
    <string name="texto_EncargadoLocal">ENCARGADO LOCAL</string>
    <string name="id_EncargadoLocal">ID del encargado</string>
    <string name="nombre_EncargadoLocal">Nombre del encargado</string>

    <!-- Tabla Encargado Local -->
    <string name="texto_Local">LOCAL</string>
    <string name="id_Ubicacion">ID de la Ubicacion</string>
    <string name="nombre_Local">Nombre del Local</string>

    <!-- Tabla Pedido -->
    <string name="texto_id_pedido">Id Pedido</string>
    <string name="id_evento_especial">Id Evento Especial</string>
    <string name="texto_tipo_pedido">Tipo Pedido</string>
    <string name="texto_tipoPedido">Tipo Pedido</string>
    <string name="texto_estado_pedido">Estado Pedido</string>
    <string name="texto_monto_Pedido">Monto Pedido</string>

    <!-- Tabla Usuario -->
    <string name="texto_Usuario">CAFETINES UES</string>
    <string name="id_Usuario">Usuario</string>
    <string name="clave_Usuario">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>

    <!-- Tabla Ubicacion -->
    <string name="texto_Ubicacion">UBICACION</string>
    <!--<string name="id_Ubicacion">ID de la Ubicacion</string>-->
    <string name="nombre_Ubicacion">Nombre de la Ubicacion</string>
    <string name="descripcion_Ubicacion">Descripcion</string>

    <!-- Tabla TipoUbicacion -->
    <string name="texto_TipoUbicacion">TIPO UBICACION</string>
    <string name="id_TipoUbicacion">ID del Tipo Ubicacion</string>
    <string name="nombre_TipoUbicacion">Tipo Ubicacion</string>
    <string name="insertarServidor">INSERTAR SERVIDOR</string>


</resources>