<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FacultadConsultarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/texto_Facultad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/id_Facultad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_Facultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:onClick="consultarFacultad"
                android:text="@string/consultar"
                android:textStyle="bold"
                android:layout_marginEnd="5sp"/>
            <Button
                android:layout_width="wrap_content"
                android:onClick="limpiarTexto"
                android:text="@string/limpiar"
                android:textStyle="bold"
                android:layout_marginEnd="5sp"/>
        </TableRow>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/nombre_Facultad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre_Facultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled ="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:longClickable="false"
                android:inputType="number">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/button4"
                android:text="@string/consultarServidor"
                android:onClick="servicioPHPF"/>
        </TableRow>
        <ListView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/listView1">

        </ListView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>